AC_INIT(yaml, 1.0, jeremy.stephens@vanderbilt.edu)
AC_PREREQ(2.50)

# Checks for programs.
AC_PROG_CC_STDC
AC_PATH_PROG([R_PROG], [R])

# Checks for libraries.
AC_CHECK_LIB(syck, syck_new_parser, , AC_MSG_ERROR(syck not found!))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h stdio.h syck.h)
AC_CHECK_SIZEOF(int, 4)
AC_CHECK_SIZEOF(long, 4)

# R stuff
AC_SUBST(RHOME, [`$R_PROG RHOME`])
AC_SUBST(R_CPPFLAGS, [`$R_PROG CMD config --cppflags` `$R_PROG CMD config CPPFLAGS`])
AC_SUBST(R_CFLAGS, [`$R_PROG CMD config CFLAGS`])
AC_SUBST(R_CPICFLAGS, [`$R_PROG CMD config CPICFLAGS`])
AC_SUBST(R_CC, [`$R_PROG CMD config CC`])
AC_SUBST(R_SHLIB_LD, [`$R_PROG CMD config SHLIB_LD`])
AC_SUBST(R_SHLIB_LDFLAGS, [`$R_PROG CMD config SHLIB_LDFLAGS`])
AC_SUBST(R_LDFLAGS, [`$R_PROG CMD config --ldflags` `$R_PROG CMD config LDFLAGS`])
AC_SUBST(R_LIBPATH, [$RHOME/lib])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 tests/Makefile])
AC_OUTPUT
